# henghesha-agent-marketplace

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.china-hk  README.md  docker-compose.china-hk-domain.yml  docker-compose.china-hk.yml  package-lock.json  package.json  pyproject.toml
apps/marketplace-api/: .env.example  package-lock.json  package.json
apps/marketplace-api/scripts/: smoke-test.js
apps/marketplace-api/sql/: schema.postgres.sql  (+3 more)
apps/marketplace-web/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
config/: models.yaml  routing_rules.yaml  settings.yaml
config/china-hk/: Caddyfile.template
docs/: api-reference.md  bind-domain-china-hk.md  deploy-china-hk.md  deploy-vercel-railway.md  henghesha-platform.md
prompts/character_bible/: base_prompt.md
prompts/dialogue_localization/: base_prompt.md
prompts/scene_bible/: base_prompt.md
prompts/shot_generation/: base_prompt.md
scripts/: deploy-china-hk.sh  enable-china-hk-domain.sh  install-marketplace.cmd  start-marketplace-api.cmd  start-marketplace-web.cmd  start-marketplace.cmd  verify-marketplace.cmd
src/: __init__.py  models.py
src/classify/: __init__.py
src/compose/: __init__.py
src/ingest/: __init__.py  cli.py  detector.py  errors.py  media_tools.py  pipeline.py  state.py  timing.py
src/localize/: __init__.py
src/qc/: __init__.py
src/runway/: __init__.py
src/transcribe/: __init__.py
src/utils/: __init__.py  enums.py  schemas.py  timecode.py
tests/: __init__.py  test_detector.py  test_ingest_pipeline.py  test_ingest_schema.py
(+44 files in other folders)
